--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
     <link rel="stylesheet" type="text/css" href="style.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css"
         integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
-        <link rel="preconnect" href="https://fonts.gstatic.com">
-        <link href="https://fonts.googleapis.com/css2?family=Molle:ital@1&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Molle:ital@1&display=swap" rel="stylesheet">
     <script src="https://kit.fontawesome.com/d3bce829f3.js" crossorigin="anonymous"></script>
     <style>
         @media only screen and (min-width: 993px) {
@@ -73,42 +73,200 @@
                 </span>
             </div>
         </nav>
-                <!-- Character Level dropdown -->
-                <a class='dropdown-button btn dropdownBtn levelbtn' href='#' data-activates='levelDrop'>Level<i
-                        class="material-icons right">arrow_drop_down</i></a>
 
-
-                <ul id='levelDrop' class='dropdown-content'>
-                    <li>Level 1</li>
-                    <li>Level 2</li>
-                    <li>Level 3</li>
-                    <li>Level 4</li>
-                    <li>Level 5</li>
-                    <li>Level 6</li>
-                    <li>Level 7</li>
-                    <li>Level 8</li>
-                    <li>Level 9</li>
-                    <li>Level 10</li>
-                    <li>Level 11</li>
-                    <li>Level 12</li>
-                    <li>Level 13</li>
-                    <li>Level 14</li>
-                    <li>Level 15</li>
-                    <li>Level 16</li>
-                    <li>Level 17</li>
-                    <li>Level 18</li>
-                    <li>Level 19</li>
-                    <li>Level 20</li>
-
-                </ul>
-
+        <div class="row flex-container card-row stats">
+            <!--HIT POINTS-->
+            <div class="card level col s6 m2">
+                <div class="card-content black-text">
+                    <h6 class="center-align">Level</h6>
+                    <input id="lev" class="brown-text charinfo" style="text-align:center; font-size: 35px;">
+                </div>
             </div>
-
-
-
+            <div class="card hitpoints col s6 m2">
+                <div class="card-content black-text">
+                    <h6 class="center-align">Hit Points</h6>
+                    <input id="hp" class="green-text charinfo" style="text-align:center; font-size: 35px;">
+                </div>
+            </div>
+            <!--ARMOR CLASS-->
+            <div class="card armorclass col s6 m2">
+                <div class="card-content black-text">
+                    <h6 class="center-align">Armor Class</h6>
+                    <input id="ac" class="brown-text charinfo" style="text-align:center; font-size: 35px;">
+                </div>
+            </div>
+            <!--Initiative-->
+            <div class="card initiative col s6 m2">
+                <div class="card-content black-text">
+                    <h6 class="center-align"> Initiative</h6>
+                    <input id="sp" class="green-text charinfo" style="text-align:center; font-size: 35px;">
+                </div>
+            </div>
+            <!--PROFICIENCY BOUNUS-->
+            <div class="card profbonus col s6 m2">
+                <div class="card-content black-text">
+                    <h6 class="center-align">Prof. Bonus</h6>
+                    <input id="int" class="brown-text charinfo" style="text-align:center; font-size: 35px;">
+                </div>
+            </div>
+            <!--SPELL-->
+            <div class="card spell col s6 m2">
+                <div class="card-content black-text">
+                    <h6 class="center-align">Spell DC</h6>
+                    <input id="pb" class="green-text charinfo" style="text-align:center; font-size: 35px;">
+                </div>
+            </div>
         </div>
-    </div>
 
+        <div class="skills-container">
+            <form action="text">
+                <ul>
+                    <label>
+                        <input type="checkbox" class="filled-in" id="acrobatics" unchecked="checked" />
+                        <span>Acrobatics</span>
+                        <input type="text" id="skill" name="acrobatics">
+                    </label>
+                </ul>
+                <ul>
+                    <label>
+                        <input type="checkbox" class="filled-in" id="animal-handling" unchecked="checked" />
+                        <span>Animal Hndl</span>
+                        <input type="text" id="skill" name="animal-handling">
+                    </label>
+                </ul>
+                <p>
+                    <label>
+                        <input type="checkbox" class="filled-in" id="arcana" unchecked="checked" />
+                        <span>Arcana</span>
+                        <input type="text" id="skill" name="arcana">
+                    </label>
+                </p>
+                <p>
+                    <label>
+                        <input type="checkbox" class="filled-in" id="athletics" unchecked="checked" />
+                        <span>Athletics</span>
+                        <input type="text" id="skill" name="athletics">
+                    </label>
+                </p>
+                <p>
+                    <label>
+                        <input type="checkbox" class="filled-in" id="athletics" unchecked="checked" />
+                        <span>Athletics</span>
+                        <input type="text" id="skill" name="athletics">
+                    </label>
+                </p>
+                <p>
+                    <label>
+                        <input type="checkbox" class="filled-in" id="deception" unchecked="checked" />
+                        <span>Deception</span>
+                        <input type="text" id="skill" name="deception">
+                    </label>
+                </p>
+                <p>
+                    <label>
+                        <input type="checkbox" class="filled-in" id="history" unchecked="checked" />
+                        <span>History</span>
+                        <input type="text" id="skill" name="history">
+                    </label>
+                </p>
+                <p>
+                    <label>
+                        <input type="checkbox" class="filled-in" id="insight" unchecked="checked" />
+                        <span>Insight</span>
+                        <input type="text" id="skill" name="insight">
+                    </label>
+                </p>
+                <p>
+                    <label>
+                        <input type="checkbox" class="filled-in" id="intimidation" unchecked="checked" />
+                        <span>Intimidation</span>
+                        <input type="text" id="skill" name="intimidation">
+                    </label>
+                </p>
+                <p>
+                    <label>
+                        <input type="checkbox" class="filled-in" id="invest" unchecked="checked" />
+                        <span>Investigation</span>
+                        <input type="text" id="skill" name="invest">
+                    </label>
+                </p>
+                <p>
+                    <label>
+                        <input type="checkbox" class="filled-in" id="med" unchecked="checked" />
+                        <span>Medicine</span>
+                        <input type="text" id="skill" name="med">
+                    </label>
+                </p>
+                <p>
+                    <label>
+                        <input type="checkbox" class="filled-in" id="nature" unchecked="checked" />
+                        <span>Nature</span>
+                        <input type="text" id="skill" name="nature">
+                    </label>
+                </p>
+                <p>
+                    <label>
+                        <input type="checkbox" class="filled-in" id="percep" unchecked="checked" />
+                        <span>Perception</span>
+                        <input type="text" id="skill" name="percep">
+                    </label>
+                </p>
+                <p>
+                    <label>
+                        <input type="checkbox" class="filled-in" id="perform" unchecked="checked" />
+                        <span>Performance</span>
+                        <input type="text" id="skill" name="perform">
+                    </label>
+                </p>
+                <p>
+                    <label>
+                        <input type="checkbox" class="filled-in" id="pers" unchecked="checked" />
+                        <span>Persuasion</span>
+                        <input type="text" id="skill" name="pers">
+                    </label>
+                </p>
+                <p>
+                    <label>
+                        <input type="checkbox" class="filled-in" id="rel" unchecked="checked" />
+                        <span>Religion</span>
+                        <input type="text" id="skill" name="rel">
+                    </label>
+                </p>
+                <p>
+                    <label>
+                        <input type="checkbox" class="filled-in" id="sleight" unchecked="checked" />
+                        <span>Sleight of Hand</span>
+                        <input type="text" id="skill" name="sleight">
+                    </label>
+                </p>
+                <p>
+                    <label>
+                        <input type="checkbox" class="filled-in" id="stealth" unchecked="checked" />
+                        <span>Stealth</span>
+                        <input type="text" id="skill" name="stealth">
+                    </label>
+                </p>
+                <p>
+                    <label>
+                        <input type="checkbox" class="filled-in" id="surv" unchecked="checked" />
+                        <span>Survival</span>
+                        <input type="text" id="skill" name="surv">
+                    </label>
+                </p>
+
+            </form>
+        </div>
+
+        <!--Save Button-->
+        <a class="waves-effect waves-light btn" id="save-button">Save Mue</a>
+
+
+
+    </div>
+    
+
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.2/js/materialize.min.js"></script>
     <script src="script.js"></script>
 </body>
 
