stats local storage

--- a/bernicio.html
+++ b/bernicio.html
@@ -10,8 +10,8 @@
     <link rel="stylesheet" type="text/css" href="style.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css"
         integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
-        <link rel="preconnect" href="https://fonts.gstatic.com">
-        <link href="https://fonts.googleapis.com/css2?family=Molle:ital@1&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Molle:ital@1&display=swap" rel="stylesheet">
     <script src="https://kit.fontawesome.com/d3bce829f3.js" crossorigin="anonymous"></script>
     <style>
         @media only screen and (min-width: 993px) {
@@ -32,61 +32,91 @@
         integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx"
         crossorigin="anonymous"></script>
 
-    <div class="jumbotron">
-        <nav class="navbar navbar-expand-lg navbar-light bg-light navbar-left">
-            <a class="navbar-brand" href="index.html">Mue <i class="fas fa-dice-d20"></i></a>
-            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarText"
-                aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse" id="navbarText">
-                <ul class="navbar-nav ml-auto">
-                    <li class="nav-item">
-                        <a class="nav-item" href="trix.html"><i class="far fa-star"></i></a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-item" href="bernicio.html"><i class="fas fa-guitar"></i></a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-item" href="jessica.html"><i class="fab fa-pagelines"></i></a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-item" href="blaargh.html"><i class="fas fa-water"></i></a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-item" href="blur.html"><i class="fas fa-running"></i></a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-item" href="ben.html"><i class="fas fa-bug"></i></a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-item" href="victor.html"><i class="fas fa-umbrella"></i></a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-item" href="jasper.html"><i class="fas fa-paw"></i></a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-item" href="sandy.html"><i class="fas fa-leaf"></i></a>
-                    </li>
-                </ul>
-                <span class="navbar-text">
-                </span>
-        </nav>
-        <div class="row align-items-start">
-            <div class="col">
-                <img class="saytr"
-                    src="https://user-images.githubusercontent.com/74163812/108791097-47f2f080-754c-11eb-8944-9e3ff652af4e.png"
-                    alt="bernie">
+        <div class="row">
+            <div class="column-1"></div>
+            <div class="containerStat">
+                <div class="card" id="str">
+                    <input type="text" class="white-text charinfo" id="str2" name="str2">
+                    Strength
+                </div>
+                <div class="card" id="dex">
+                    <input type="text" class="white-text charinfo" id="dex2" name="dex2">
+                    Dexterity
+                </div>
+                <div class="card" id="con">
+                    <input type="text" class="white-text charinfo" id="con2" name="con2" >
+                    Constitution
+                </div>
+                <div class="card" id="intl">
+                    <input type="text" class="white-text charinfo" id="intl2" name="intl2">
+                    Intelligence
+                </div>
+                <div class="card" id="wis">
+                    <input type="text" class="white-text charinfo" id="wis2" name="wis2">
+                    Wisdom
+                </div>
+                <div class="card" id="charis">
+                    <input type="text" class="white-text charinfo" id="charis2" name="charis2">
+                    Charisma
+                </div>
             </div>
-            <div class="col">
-                <img class="saytr2"
-                    src="https://user-images.githubusercontent.com/74163812/108790978-03675500-754c-11eb-8641-dea88c0eeb05.jpeg"
-                    alt="bernie">
+
+        <div class="jumbotron">
+            <div class="column-2"></div>
+            <nav class="navbar navbar-expand-lg navbar-light bg-light navbar-left">
+                <a class="navbar-brand" href="index.html">Mue <i class="fas fa-dice-d20"></i></a>
+                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarText"
+                    aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="navbarText">
+                    <ul class="navbar-nav ml-auto">
+                        <li class="nav-item">
+                            <a class="nav-item" href="trix.html"><i class="far fa-star"></i></a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-item" href="bernicio.html"><i class="fas fa-guitar"></i></a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-item" href="jessica.html"><i class="fab fa-pagelines"></i></a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-item" href="blaargh.html"><i class="fas fa-water"></i></a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-item" href="blur.html"><i class="fas fa-running"></i></a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-item" href="ben.html"><i class="fas fa-bug"></i></a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-item" href="victor.html"><i class="fas fa-umbrella"></i></a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-item" href="jasper.html"><i class="fas fa-paw"></i></a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-item" href="sandy.html"><i class="fas fa-leaf"></i></a>
+                        </li>
+                    </ul>
+                    <span class="navbar-text">
+                    </span>
+            </nav>
+            <div class="row align-items-start">
+                <div class="col">
+                    <img class="saytr"
+                        src="https://user-images.githubusercontent.com/74163812/108791097-47f2f080-754c-11eb-8944-9e3ff652af4e.png"
+                        alt="bernie">
+                </div>
+                <div class="col">
+                    <img class="saytr2"
+                        src="https://user-images.githubusercontent.com/74163812/108790978-03675500-754c-11eb-8641-dea88c0eeb05.jpeg"
+                        alt="bernie">
+                </div>
             </div>
         </div>
     </div>
-    </div>
-    </div>
+   
 
     <script src="script.js"></script>
 </body>
