--- a/index.html
+++ b/index.html
@@ -36,27 +36,27 @@
         <div class="column-1"></div>
         <div class="containerStat">
             <div class="card" id="str">
-                <input type="text" id="str2" name="str2">
+                <input type="text" class="white-text charinfo" id="str2" name="str2">
                 Strength
             </div>
             <div class="card" id="dex">
-                <input type="text" id="str2" name="str2">
+                <input type="text" class="white-text charinfo" id="dex2" name="dex2">
                 Dexterity
             </div>
             <div class="card" id="con">
-                <input type="text" id="str2" name="str2">
+                <input type="text" class="white-text charinfo" id="con2" name="con2" >
                 Constitution
             </div>
             <div class="card" id="intl">
-                <input type="text" id="str2" name="str2">
+                <input type="text" class="white-text charinfo" id="intl2" name="intl2">
                 Intelligence
             </div>
             <div class="card" id="wis">
-                <input type="text" id="str2" name="str2">
+                <input type="text" class="white-text charinfo" id="wis2" name="wis2">
                 Wisdom
             </div>
             <div class="card" id="charis">
-                <input type="text" id="str2" name="str2">
+                <input type="text" class="white-text charinfo" id="charis2" name="charis2">
                 Charisma
             </div>
         </div>
