skills and stats local storage

--- a/index.html
+++ b/index.html
@@ -37,27 +37,27 @@
         <div class="containerStat">
             <div class="card" id="str">
                 <input type="text" class="white-text charinfo" id="str2" name="str2">
-                Strength
+                Strength <br> <label class= "add"> (-1)</label>
             </div>
             <div class="card" id="dex">
                 <input type="text" class="white-text charinfo" id="dex2" name="dex2">
-                Dexterity
+                Dexterity <br> <label class= "add">(+3)</label>
             </div>
             <div class="card" id="con">
                 <input type="text" class="white-text charinfo" id="con2" name="con2" >
-                Constitution
+                Constitution<br> <label class= "add">(+2)</label>
             </div>
             <div class="card" id="intl">
                 <input type="text" class="white-text charinfo" id="intl2" name="intl2">
-                Intelligence
+                Intelligence<br> <label class= "add">(-1)</label>
             </div>
             <div class="card" id="wis">
                 <input type="text" class="white-text charinfo" id="wis2" name="wis2">
-                Wisdom
+                Wisdom<br> <label class= "add">(+2)</label>
             </div>
-            <div class="card" id="charis">
-                <input type="text" class="white-text charinfo" id="charis2" name="charis2">
-                Charisma
+            <div class="card" id="charisma">
+                <input type="text" class="white-text charinfo" id="charisma2" name="charisma2">
+                Charisma<br> <label class= "add">(+2)</label>
             </div>
         </div>
 
@@ -154,126 +154,126 @@
                     <label>
                         <input type="checkbox" class="filled-in" id="acrobatics" unchecked="checked" />
                         <span>Acrobatics</span>
-                        <input type="text" id="skill" name="acrobatics">
+                        <input type="text" id="acrobatics2" name="acrobatics2">
                     </label>
                 </p>
                 <p>
                     <label>
                         <input type="checkbox" class="filled-in" id="animal-handling" unchecked="checked" />
-                        <span>Animal Hndl</span>
-                        <input type="text" id="skill" name="animal-handling">
+                        <span>Animal Handle</span>
+                        <input type="text" id="animal2" name="animal2">
                     </label>
                 </p>
                 <p>
                     <label>
                         <input type="checkbox" class="filled-in" id="arcana" unchecked="checked" />
                         <span>Arcana</span>
-                        <input type="text" id="skill" name="arcana">
+                        <input type="text" id="arcana2" name="arcana2">
                     </label>
                 </p>
                 <p>
                     <label>
                         <input type="checkbox" class="filled-in" id="athletics" unchecked="checked" />
                         <span>Athletics</span>
-                        <input type="text" id="skill" name="athletics">
+                        <input type="text" id="athletics2" name="athletics2">
                     </label>
                 </p>
                 <p>
                     <label>
                         <input type="checkbox" class="filled-in" id="deception" unchecked="checked" />
                         <span>Deception</span>
-                        <input type="text" id="skill" name="deception">
+                        <input type="text" id="deception2" name="deception2">
                     </label>
                 </p>
                 <p>
                     <label>
                         <input type="checkbox" class="filled-in" id="history" unchecked="checked" />
                         <span>History</span>
-                        <input type="text" id="skill" name="history">
+                        <input type="text" id="history2" name="history2">
                     </label>
                 </p>
                 <p>
                     <label>
                         <input type="checkbox" class="filled-in" id="insight" unchecked="checked" />
                         <span>Insight</span>
-                        <input type="text" id="skill" name="insight">
+                        <input type="text" id="insight2" name="insight2">
                     </label>
                 </p>
                 <p>
                     <label>
                         <input type="checkbox" class="filled-in" id="intimidation" unchecked="checked" />
                         <span>Intimidation</span>
-                        <input type="text" id="skill" name="intimidation">
+                        <input type="text" id="intimidation2" name="intimidation2">
                     </label>
                 </p>
                 <p>
                     <label>
                         <input type="checkbox" class="filled-in" id="invest" unchecked="checked" />
                         <span>Investigation</span>
-                        <input type="text" id="skill" name="invest">
+                        <input type="text" id="invest2" name="invest2">
                     </label>
                 </p>
                 <p>
                     <label>
                         <input type="checkbox" class="filled-in" id="med" unchecked="checked" />
                         <span>Medicine</span>
-                        <input type="text" id="skill" name="med">
+                        <input type="text" id="med2" name="med2">
                     </label>
                 </p>
                 <p>
                     <label>
                         <input type="checkbox" class="filled-in" id="nature" unchecked="checked" />
                         <span>Nature</span>
-                        <input type="text" id="skill" name="nature">
+                        <input type="text" id="nature2" name="nature2">
                     </label>
                 </p>
                 <p>
                     <label>
                         <input type="checkbox" class="filled-in" id="percep" unchecked="checked" />
                         <span>Perception</span>
-                        <input type="text" id="skill" name="percep">
+                        <input type="text" id="percep2" name="percep2">
                     </label>
                 </p>
                 <p>
                     <label>
                         <input type="checkbox" class="filled-in" id="perform" unchecked="checked" />
                         <span>Performance</span>
-                        <input type="text" id="skill" name="perform">
+                        <input type="text" id="perform2" name="perform2">
                     </label>
                 </p>
                 <p>
                     <label>
                         <input type="checkbox" class="filled-in" id="pers" unchecked="checked" />
                         <span>Persuasion</span>
-                        <input type="text" id="skill" name="pers">
+                        <input type="text" id="pers2" name="pers2">
                     </label>
                 </p>
                 <p>
                     <label>
                         <input type="checkbox" class="filled-in" id="rel" unchecked="checked" />
                         <span>Religion</span>
-                        <input type="text" id="skill" name="rel">
+                        <input type="text" id="rel2" name="rel2">
                     </label>
                 </p>
                 <p>
                     <label>
                         <input type="checkbox" class="filled-in" id="sleight" unchecked="checked" />
                         <span>Sleight of Hand</span>
-                        <input type="text" id="skill" name="sleight">
+                        <input type="text" id="sleight2" name="sleight2">
                     </label>
                 </p>
                 <p>
                     <label>
                         <input type="checkbox" class="filled-in" id="stealth" unchecked="checked" />
                         <span>Stealth</span>
-                        <input type="text" id="skill" name="stealth">
+                        <input type="text" id="stealth2" name="stealth2">
                     </label>
                 </p>
                 <p>
                     <label>
                         <input type="checkbox" class="filled-in" id="surv" unchecked="checked" />
                         <span>Survival</span>
-                        <input type="text" id="skill" name="surv">
+                        <input type="text" id="surv2" name="surv2">
                     </label>
                 </p>
 
