--- a/jasper.html
+++ b/jasper.html
@@ -37,29 +37,30 @@
             <div class="containerStat">
                 <div class="card" id="str">
                     <input type="text" class="white-text charinfo" id="str2" name="str2">
-                    Strength
+                    Strength <br> <label class= "add"> (-1)</label>
                 </div>
                 <div class="card" id="dex">
                     <input type="text" class="white-text charinfo" id="dex2" name="dex2">
-                    Dexterity
+                    Dexterity <br> <label class= "add">(+3)</label>
                 </div>
                 <div class="card" id="con">
                     <input type="text" class="white-text charinfo" id="con2" name="con2" >
-                    Constitution
+                    Constitution<br> <label class= "add">(+2)</label>
                 </div>
                 <div class="card" id="intl">
                     <input type="text" class="white-text charinfo" id="intl2" name="intl2">
-                    Intelligence
+                    Intelligence<br> <label class= "add">(-1)</label>
                 </div>
                 <div class="card" id="wis">
                     <input type="text" class="white-text charinfo" id="wis2" name="wis2">
-                    Wisdom
+                    Wisdom<br> <label class= "add">(+2)</label>
                 </div>
-                <div class="card" id="charis">
-                    <input type="text" class="white-text charinfo" id="charis2" name="charis2">
-                    Charisma
+                <div class="card" id="charisma">
+                    <input type="text" class="white-text charinfo" id="charisma2" name="charisma2">
+                    Charisma<br> <label class= "add">(+2)</label>
                 </div>
             </div>
+    
 
         <div class="jumbotron">
             <div class="column-2"></div>
